--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "node": ">=4"
   },
   "scripts": {
-    "test": "xo && ava"
+    "test": "xo && nyc ava"
   },
   "files": [
     "index.js"
@@ -26,8 +26,16 @@
   ],
   "dependencies": {},
   "devDependencies": {
-    "ava": "^0.17.0",
+    "ava": "^0.18.2",
     "babel-core": "^6.24.0",
-    "xo": "^0.17.0"
+    "coveralls": "^2.13.0",
+    "nyc": "^10.2.0",
+    "xo": "^0.18.1"
+  },
+  "nyc": {
+    "reporter": [
+      "lcov",
+      "text"
+    ]
   }
 }
